client/src/components/css/Login.css
.outer-login-div {
    height: auto;
    display: flex;
    align-items: center;
    margin-top: 5%;
}

.login-container {
    display: flex;
    flex-direction: column;
    padding-inline: 27px;
    margin: 0 auto;
    font-family: 'Outfit', sans-serif;
    font-size: 1.5rem;
}

.login-form {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 500px;  
    margin-top: 3%;  
}

.login-form > input {
    border: 1px solid rgba(209, 213, 219);
    height: 50px;
    text-indent: 10px;
    font-family: 'Outfit', sans-serif;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
    font-weight: 400;
}

.login-form > input:focus {
    outline: none;
}

.login-form > input:first-of-type {
    border-radius: 6px 6px 0px 0px;
}

.login-form > input:last-of-type {
    border-radius: 0px 0px 6px 6px;
    border-top: none;
}

.login-form > button {
    background: linear-gradient(
  270deg,
  #751c87 0%,  
  #8D41AA 10%,  
  #BA356C 20%,  
  #F22C30 35%,  
  #F8573A 60%,  
  #FCBB57 100%  
);

    border: none;
    border-radius: 6px;
    height: 55px;
    margin-top: 22px;
    color: white;
    font-family: 'Outfit', sans-serif;
    font-size: 1.3rem;
    margin-bottom: 22px;
}

.login-form > button:disabled {
    background-color: #aaaaaa;
    cursor: not-allowed;
}

.red {
    color: #cc0000;
}

